mention Solana in description

--- a/sdk/program-option/Cargo.toml
+++ b/sdk/program-option/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "solana-program-option"
-description = "A C representation of Rust's Option"
+description = "A C representation of Rust's Option, used in Solana programs."
 documentation = "https://docs.rs/solana-program-option"
 version = { workspace = true }
 authors = { workspace = true }
