make zstd optional

--- a/account-decoder-client-types/Cargo.toml
+++ b/account-decoder-client-types/Cargo.toml
@@ -17,7 +17,10 @@ serde_derive = { workspace = true }
 serde_json = { workspace = true }
 solana-program = { workspace = true }
 solana-sdk = { workspace = true }
-zstd = { workspace = true }
+zstd = { workspace = true, optional = true }
+
+[features]
+zstd = ["dep:zstd"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
