--- a/rpc-client/Cargo.toml
+++ b/rpc-client/Cargo.toml
@@ -22,7 +22,7 @@ semver = { workspace = true }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
-solana-account-decoder-client-types = { workspace = true }
+solana-account-decoder-client-types = { workspace = true, features = ["zstd"] }
 solana-rpc-client-api = { workspace = true }
 solana-sdk = { workspace = true }
 solana-transaction-status-client-types = { workspace = true }
