--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -44,6 +44,7 @@ solana-hash = { workspace = true, features = [
 solana-instruction = { workspace = true, default-features = false, features = [
     "bincode",
     "serde",
+    "std",
 ] }
 solana-msg = { workspace = true }
 solana-program-memory = { workspace = true }
