--- a/sdk/program-error/Cargo.toml
+++ b/sdk/program-error/Cargo.toml
@@ -15,7 +15,9 @@ num-traits = { workspace = true }
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
 solana-decode-error = { workspace = true }
-solana-instruction = { workspace = true, default-features = false }
+solana-instruction = { workspace = true, default-features = false, features = [
+    "std",
+] }
 solana-msg = { workspace = true }
 solana-pubkey = { workspace = true, default-features = false }
 
