--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -74,6 +74,7 @@ solana-short-vec = { workspace = true }
 solana-slot-hashes = { workspace = true, features = ["serde", "sysvar"] }
 solana-slot-history = { workspace = true, features = ["serde", "sysvar"] }
 solana-stable-layout = { workspace = true }
+solana-system-instruction = { workspace = true }
 solana-sysvar-id = { workspace = true }
 thiserror = { workspace = true }
 
