--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -28,8 +28,8 @@ full = [
     "rand0-7",
     "serde_json",
     "solana-signature",
+    "solana-signer",
     "ed25519-dalek",
-    "ed25519-dalek-bip32",
     "libsecp256k1",
     "sha3",
     "digest",
@@ -60,12 +60,10 @@ chrono = { workspace = true, features = ["alloc"], optional = true }
 curve25519-dalek = { workspace = true, optional = true }
 digest = { workspace = true, optional = true }
 ed25519-dalek = { workspace = true, optional = true }
-ed25519-dalek-bip32 = { workspace = true, optional = true }
 generic-array = { workspace = true, features = [
     "serde",
     "more_lengths",
 ], optional = true }
-hmac = { workspace = true }
 itertools = { workspace = true }
 lazy_static = { workspace = true }
 libsecp256k1 = { workspace = true, optional = true, features = ["hmac"] }
@@ -74,10 +72,9 @@ memmap2 = { workspace = true, optional = true }
 num-derive = { workspace = true }
 num-traits = { workspace = true }
 num_enum = { workspace = true }
-pbkdf2 = { workspace = true }
 qualifier_attr = { workspace = true, optional = true }
 rand = { workspace = true, optional = true }
-rand0-7 = { package = "rand", version = "0.7", optional = true }
+rand0-7 = { workspace = true, optional = true }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
 serde_derive = { workspace = true }
@@ -99,6 +96,7 @@ solana-sdk-macro = { workspace = true }
 solana-secp256k1-recover = { workspace = true }
 solana-serde-varint = { workspace = true }
 solana-short-vec = { workspace = true }
+solana-signer = { workspace = true, optional = true }
 solana-signature = { workspace = true, features = [
     "rand",
     "serde",
