--- a/sdk/signer/Cargo.toml
+++ b/sdk/signer/Cargo.toml
@@ -10,7 +10,7 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-bs58 = { workspace = true }
+bs58 = { workspace = true, features = ["std"] }
 ed25519-dalek = { workspace = true }
 ed25519-dalek-bip32 = { workspace = true }
 hmac = { workspace = true }
