--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -36,6 +36,7 @@ full = [
     "digest",
     "solana-pubkey/rand",
     "dep:solana-precompile-error",
+    "dep:solana-presigner",
     "dep:solana-seed-derivable",
     "dep:solana-seed-phrase",
     "dep:solana-transaction-error"
@@ -108,6 +109,7 @@ solana-instruction = { workspace = true }
 solana-native-token = { workspace = true }
 solana-packet = { workspace = true, features = ["bincode", "serde"] }
 solana-precompile-error = { workspace = true, optional = true }
+solana-presigner = { workspace = true, optional = true }
 solana-program = { workspace = true }
 solana-program-memory = { workspace = true }
 solana-pubkey = { workspace = true, default-features = false, features = ["std"] }
