--- a/sdk/signer/Cargo.toml
+++ b/sdk/signer/Cargo.toml
@@ -16,7 +16,7 @@ itertools = { workspace = true }
 rand0-7 = { workspace = true }
 serde_json = { workspace = true }
 solana-pubkey = { workspace = true }
-solana-signature = { workspace = true, features = ["verify"] }
+solana-signature = { workspace = true }
 solana-transaction-error = { workspace = true }
 thiserror = { workspace = true }
 
