--- a/sdk/signer/Cargo.toml
+++ b/sdk/signer/Cargo.toml
@@ -10,11 +10,11 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-bs58 = { workspace = true, features = ["std"] }
-ed25519-dalek = { workspace = true }
+bs58 = { workspace = true, features = ["std"], optional = true }
+ed25519-dalek = { workspace = true, optional = true }
 itertools = { workspace = true }
-rand0-7 = { workspace = true }
-serde_json = { workspace = true }
+rand0-7 = { workspace = true, optional = true }
+serde_json = { workspace = true, optional = true }
 solana-pubkey = { workspace = true }
 solana-signature = { workspace = true }
 solana-transaction-error = { workspace = true }
@@ -22,6 +22,14 @@ thiserror = { workspace = true }
 
 [dev-dependencies]
 static_assertions = { workspace = true }
+
+[features]
+keypair = [
+    "dep:bs58",
+    "dep:ed25519-dalek",
+    "dep:rand0-7",
+    "dep:serde_json"
+]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
