missing dep for frozen-abi

--- a/sdk/system-instruction/Cargo.toml
+++ b/sdk/system-instruction/Cargo.toml
@@ -18,6 +18,7 @@ serde = { workspace = true }
 serde_derive = { workspace = true }
 solana-decode-error = { workspace = true }
 solana-instruction = { workspace = true, features = ["bincode", "std"] }
+solana-logger = { workspace = true, optional = true }
 solana-pubkey = { workspace = true, default-features = false, features = ["serde"] }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
@@ -36,6 +37,7 @@ strum_macros = { workspace = true }
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
+    "dep:solana-logger",
 ]
 
 [lints]
