--- a/sdk/slot-hashes/Cargo.toml
+++ b/sdk/slot-hashes/Cargo.toml
@@ -18,7 +18,7 @@ solana-hash = { workspace = true, default-features = false }
 solana-sha256-hasher = { workspace = true }
 
 [features]
-serde = ["dep:serde", "dep:serde_derive"]
+serde = ["dep:serde", "dep:serde_derive", "solana-hash/serde"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
