--- a/sdk/system-instruction/Cargo.toml
+++ b/sdk/system-instruction/Cargo.toml
@@ -17,11 +17,11 @@ num-traits = { workspace = true }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 solana-decode-error = { workspace = true }
+solana-frozen-abi = { workspace = true, optional = true }
+solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-instruction = { workspace = true, features = ["bincode", "std"] }
 solana-logger = { workspace = true, optional = true }
 solana-pubkey = { workspace = true, default-features = false, features = ["serde"] }
-solana-frozen-abi = { workspace = true, optional = true }
-solana-frozen-abi-macro = { workspace = true, optional = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
@@ -37,7 +37,7 @@ strum_macros = { workspace = true }
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
-    "dep:solana-logger",
+    "dep:solana-logger"
 ]
 
 [lints]
