missing feature activation

--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -149,7 +149,8 @@ frozen-abi = [
     "solana-instruction/frozen-abi",
     "solana-pubkey/frozen-abi",
     "solana-rent/frozen-abi",
-    "solana-short-vec/frozen-abi"
+    "solana-short-vec/frozen-abi",
+    "solana-system-instruction/frozen-abi"
 ]
 
 [lints]
