missing dev deps

--- a/sdk/rent/Cargo.toml
+++ b/sdk/rent/Cargo.toml
@@ -16,6 +16,10 @@ solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-sdk-macro = { workspace = true }
 
+[dev-dependencies]
+solana-clock = { workspace = true }
+static_assertions = { workspace = true }
+
 [features]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 serde = ["dep:serde", "dep:serde_derive"]
