--- a/sdk/packet/Cargo.toml
+++ b/sdk/packet/Cargo.toml
@@ -13,11 +13,11 @@ edition = { workspace = true }
 bincode = { workspace = true, optional = true }
 bitflags = { workspace = true }
 cfg_eval = { workspace = true, optional = true }
-solana-frozen-abi = { workspace = true, optional = true }
-solana-frozen-abi-macro = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
 serde_with = { workspace = true, optional = true, features = ["macros"] }
+solana-frozen-abi = { workspace = true, optional = true }
+solana-frozen-abi-macro = { workspace = true, optional = true }
 
 [dev-dependencies]
 solana-packet = { path = ".", features = ["dev-context-only-utils"] }
@@ -31,7 +31,7 @@ serde = [
     "dep:cfg_eval",
     "dep:serde",
     "dep:serde_derive",
-    "dep:serde_with",
+    "dep:serde_with"
 ]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 
