--- a/sdk/presigner/Cargo.toml
+++ b/sdk/presigner/Cargo.toml
@@ -14,5 +14,8 @@ solana-pubkey = { workspace = true }
 solana-signature = { workspace = true, features = ["verify"] }
 solana-signer = { workspace = true }
 
+[dev-dependencies]
+solana-signer = { workspace = true, features = ["keypair"] }
+
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
