--- a/sdk/reserved-account-keys/Cargo.toml
+++ b/sdk/reserved-account-keys/Cargo.toml
@@ -12,7 +12,16 @@ edition = { workspace = true }
 [dependencies]
 lazy_static = { workspace = true }
 solana-feature-set = { workspace = true }
+solana-frozen-abi = { workspace = true, optional = true, features = [
+    "frozen-abi",
+] }
+solana-frozen-abi-macro = { workspace = true, optional = true, features = [
+    "frozen-abi",
+] }
 solana-program = { workspace = true }
+
+[features]
+frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
