--- a/sdk/reserved-account-keys/Cargo.toml
+++ b/sdk/reserved-account-keys/Cargo.toml
@@ -18,7 +18,8 @@ solana-frozen-abi = { workspace = true, optional = true, features = [
 solana-frozen-abi-macro = { workspace = true, optional = true, features = [
     "frozen-abi",
 ] }
-solana-program = { workspace = true }
+solana-pubkey = { workspace = true, default-features = false }
+solana-sdk-ids = { workspace = true }
 
 [features]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
