--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -33,6 +33,7 @@ sha2 = { workspace = true }
 sha3 = { workspace = true }
 solana-account-info = { workspace = true, features = ["bincode"] }
 solana-atomic-u64 = { workspace = true }
+solana-bincode = { workspace = true }
 solana-clock = { workspace = true, features = ["serde"] }
 solana-decode-error = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
@@ -47,7 +48,6 @@ solana-instruction = { workspace = true, default-features = false, features = [
     "serde",
     "std",
 ] }
-solana-limited-deserialize = { workspace = true }
 solana-msg = { workspace = true }
 solana-program-error = { workspace = true, features = ["serde"] }
 solana-program-memory = { workspace = true }
