--- a/sdk/transaction-context/Cargo.toml
+++ b/sdk/transaction-context/Cargo.toml
@@ -16,6 +16,8 @@ solana-pubkey = { workspace = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+all-features = true
+rustdoc-args = ["--cfg=docsrs"]
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
 bincode = { workspace = true, optional = true }
