--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -44,7 +44,11 @@ full = [
     "dep:solana-transaction-error"
 ]
 borsh = ["dep:borsh", "solana-program/borsh", "solana-secp256k1-recover/borsh"]
-dev-context-only-utils = ["qualifier_attr", "solana-account/dev-context-only-utils"]
+dev-context-only-utils = [
+    "qualifier_attr",
+    "solana-account/dev-context-only-utils",
+    "solana-transaction-context/dev-context-only-utils",
+]
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
