add doc_auto_cfg like in #3121

--- a/sdk/signer/Cargo.toml
+++ b/sdk/signer/Cargo.toml
@@ -35,3 +35,5 @@ keypair = [
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+all-features = true
+rustdoc-args = ["--cfg=docsrs"]
