--- a/sdk/reserved-account-keys/Cargo.toml
+++ b/sdk/reserved-account-keys/Cargo.toml
@@ -29,6 +29,8 @@ frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+all-features = true
+rustdoc-args = ["--cfg=docsrs"]
 
 [lints]
 workspace = true
