--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -59,6 +59,7 @@ dev-context-only-utils = [
     "qualifier_attr",
     "solana-account/dev-context-only-utils",
     "solana-compute-budget-interface/dev-context-only-utils",
+    "solana-rent-debits/dev-context-only-utils",
     "solana-transaction-context/dev-context-only-utils",
 ]
 frozen-abi = [
