--- a/sdk/entrypoint/Cargo.toml
+++ b/sdk/entrypoint/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "solana-entrypoint"
+name = "solana-program-entrypoint"
 description = "The Solana BPF program entrypoint supported by the latest BPF loader."
-documentation = "https://docs.rs/solana-entrypoint"
+documentation = "https://docs.rs/solana-program-entrypoint"
 version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
