add static assertion for inlined SUCCESS const (needed to remove #[cfg(target_os = "solana")] for this to work)

--- a/sdk/cpi/Cargo.toml
+++ b/sdk/cpi/Cargo.toml
@@ -22,6 +22,7 @@ solana-stable-layout = { workspace = true }
 [dev-dependencies]
 solana-program-entrypoint = { workspace = true }
 solana-program = { path = "../program" }
+static_assertions = { workspace = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
