--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ members = [
     "sdk/epoch-schedule",
     "sdk/feature-set",
     "sdk/fee-calculator",
+    "sdk/fee-structure",
     "sdk/gen-headers",
     "sdk/hash",
     "sdk/inflation",
@@ -429,6 +430,7 @@ solana-faucet = { path = "faucet", version = "=2.2.0" }
 solana-feature-set = { path = "sdk/feature-set", version = "=2.2.0" }
 solana-fee-calculator = { path = "sdk/fee-calculator", version = "=2.2.0" }
 solana-fee = { path = "fee", version = "=2.2.0" }
+solana-fee-structure = { path = "sdk/fee-structure", version = "=2.2.0" }
 solana-frozen-abi = { path = "frozen-abi", version = "=2.2.0" }
 solana-frozen-abi-macro = { path = "frozen-abi/macro", version = "=2.2.0" }
 solana-tps-client = { path = "tps-client", version = "=2.2.0" }
