--- a/sdk/fee-structure/Cargo.toml
+++ b/sdk/fee-structure/Cargo.toml
@@ -16,6 +16,8 @@ solana-native-token = { workspace = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+all-features = true
+rustdoc-args = ["--cfg=docsrs"]
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
 solana-program = { workspace = true, default-features = false }
