--- a/sdk/timing-utils/Cargo.toml
+++ b/sdk/timing-utils/Cargo.toml
@@ -9,6 +9,9 @@ homepage = { workspace = true }
 license = { workspace = true }
 edition = { workspace = true }
 
+[dev-dependencies]
+solana-logger = { workspace = true }
+
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
