fix circular dep

--- a/sdk/transaction/Cargo.toml
+++ b/sdk/transaction/Cargo.toml
@@ -42,7 +42,7 @@ solana-keypair = { workspace = true }
 solana-presigner = { workspace = true }
 solana-program = { workspace = true, default-features = false }
 solana-pubkey = { workspace = true, features = ["rand"] }
-solana-sdk = { workspace = true }
+solana-sdk = { path = ".." }
 solana-sha256-hasher = { workspace = true }
 solana-transaction = { path = ".", features = ["dev-context-only-utils"] }
 
